# DishRegistry

./: README.md
backend/: db.sqlite3  manage.py  pyproject.toml
backend/dishregistry/: api_urls.py  asgi.py  settings.py  urls.py  wsgi.py
backend/mealplan/: admin.py  models.py  serializers.py  urls.py  views.py
backend/mealplan/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_mealplan_shopping_list_delete_shoppinglist.py
backend/recipe/: admin.py  models.py  serializers.py  urls.py  views.py
backend/recipe/migrations/: 0001_initial.py  0002_initial.py
backend/shoppinglist/: views.py
backend/user/: models.py  serializers.py  urls.py  views.py
backend/user/management/commands/: create_groups.py
backend/user/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.jsx
frontend/src/archive/: CookDashboard.jsx  Loading.jsx  MyRecipes.jsx  PlannerDashboard.jsx  RecipeLikesComments.jsx  UserDashboard.jsx
frontend/src/components/: Footer.jsx  HeroSection.jsx  Navbar.jsx  ProfileModal.jsx  SavedRecipes.jsx
frontend/src/contexts/: RecipeContext.jsx  ReviewContext.jsx  UserContext.jsx
frontend/src/pages/: AdminDashboard.jsx  Alert.jsx  CookDashboard.jsx  Home.jsx  Loading.jsx  Login.jsx  MealPlannerDashboard.jsx  NotFound.jsx  PlannerDashboard.jsx  Profile.jsx  ProfileEdit.jsx  RecipeDetails.jsx  RecipeSearch.jsx  Recipes.jsx  Register.jsx  Search.jsx  SearchRecipe.jsx  SuccessAlert.jsx  UserDashboard.jsx
frontend/src/routes/: RouteConfig.jsx
frontend/src/utils/: auth.jsx
(+30 files in other folders)
